client/src/app/components/login-registration/login/login.component.scss
.form {
    float: right;
    height: 630px;
    background-image: linear-gradient(rgb(207, 223, 230), white);
    opacity: 0.98;
    width: 40%;
    text-align: center;
    padding: 10px;
    padding-top: 80px;
}

.background {
    background-image: url("../../../../assets/cover-photo.jpg");
    background-size: 1300px;
    height: 700px;
}

.loginUser {
    margin-top: 10%;
}

mat-button-toggle-group {
    margin-bottom: 5%;
}

